fix structure codebase

--- a/backend/.env
+++ b/backend/.env
@@ -9,7 +9,7 @@ PORT=5002
 NODE_ENV="development"
 FRONTEND_URL="http://localhost:5173"
 
-# SMTP (Mailtrap)
+# SMTP (---Thêm tính năng gửi mail---) bổ sung
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_USER=075e3554a502e6
