--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.x.x",
     "@types/helmet": "^0.0.48",
     "@types/joi": "17.2.2",
+    "axios": "1.9.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
