add vnpay for payment

--- a/backend/.env
+++ b/backend/.env
@@ -17,7 +17,7 @@ SMTP_PASS=38c2e4acb6644e
 SMTP_FROM=noreply@example.com
 
 #VNPay
-VNPAY_TMN_CODE=EXAMPLE
-VNPAY_SECURE_SECRET=SECRET
+VNPAY_TMN_CODE=ZAVGV1VT
+VNPAY_SECURE_SECRET=OR92SDL9CRPL5TOXFICMKRVASZ4FXJ4M
 VNPAY_RETURN_URL=http://localhost:5002/api/vnpay/return
 FRONTEND_PAYMENT_RESULT_URL=http://localhost:5173/payment-result
