--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "dormitory-management-system-backend",
   "version": "1.0.0",
   "description": "Backend for Dormitory Management Application",
-  "main": "dist/server.ts",
+  "main": "dist/server.js",
   "scripts": {
     "start": "node dist/server.js",
     "start:prod": "NODE_ENV=production node dist/server.js",
@@ -11,16 +11,17 @@
     "start:simple": "ts-node src/server.ts",
     "kill": "node scripts/kill-port.js",
     "dev:clean": "npm run kill && npm run dev",
-    "build": "npx prisma generate && tsc",
+    "build": "prisma generate && tsc",
     "postbuild": "node -e \"const fs=require('fs');const path=require('path');if(fs.existsSync('prisma')){try{fs.cpSync('prisma',path.join('dist','prisma'),{recursive:true});}catch(e){console.log('Copy prisma folder:',e.message);}}\"",
-    "railway:build": "npx prisma generate && npm run build",
-    "railway:start": "npx prisma migrate deploy && npm run start:prod",
+    "railway:build": "prisma generate && npm run build",
+    "railway:start": "prisma migrate deploy && npm run start:prod",
+    "postinstall": "prisma generate",
     "health": "node scripts/health-check.js",
     "test": "jest",
     "check-uploads": "node -e \"const fs=require('fs');const path=require('path');const dir=path.resolve(__dirname,'uploads');console.log('Uploads:',{dir,exists:fs.existsSync(dir),files:fs.existsSync(dir)?fs.readdirSync(dir):'none'});\""
   },
   "dependencies": {
-    "@prisma/client": "^5.x.x",
+    "@prisma/client": "^5.22.0",
     "@types/helmet": "^0.0.48",
     "@types/joi": "17.2.2",
     "axios": "1.9.0",
@@ -52,7 +53,7 @@
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.0.x",
-    "prisma": "^5.x.x",
+    "prisma": "^5.22.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.x.x",
     "typescript": "^5.x.x",
@@ -62,7 +63,6 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "engines": {
-    "node": ">=16.0.0"
-  },
-  "postinstall": "prisma generate"
+    "node": ">=18.0.0"
+  }
 }
