--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,2 @@
-VITE_API_URL=dormitorymanagement.railway.internal
+VITE_API_URL=dormitorymanagement-production.up.railway.app
+VITE_UPLOADS_URL=dormitorymanagement-production.up.railway.app/uploads
